# quizlet-cards-ai-generator

./: .bandit  .editorconfig  .flake8  .gitignore  Makefile  README.md  mypy.ini  pyproject.toml
generator/: config.py  entities.py  generate_cards.py  read-generate-import.py  validation.py
generator/api_calls/: openai_text.py
generator/api_calls/text_prompt_by_language/: english_prompt_text.py  polish_prompt_text.py  prompt_by_language.py
generator/input/: confirm.py  file_operations.py  read_input_file.py
