[tool.bandit]
exclude_dirs = [
    "cache",
    "img",
    "input",
    "output",
]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.pip-cache
  | \.venv
  | \.vscode
  | _build
  | buck-out
  | build
  | dist
  | proto
)/
'''

[tool.isort]
combine_as_imports = true
known_pd = ""
profile = "black"
sections = "FUTURE,STDLIB,THIRDPARTY,PD,FIRSTPARTY,LOCALFOLDER"
skip = ".eggs,.pip-cache,.poetry,venv,.venv,proto"

[tool.mypy]
files = [
    "generator",
]
plugins = [
    "pydantic.mypy"
]

check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = true
no_implicit_reexport = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.poetry]
name = "quizlet-cards-ai-generator"
version = "1.0.0-dev.0"
description = "Util for generation Quizlet cards"
readme = "README.md"
authors = [
    "darya.shynkevich"
]
package-mode = false

[tool.poetry.dependencies]
python = "~3.11"

altgraph = ">=0.17.4"
annotated-types = ">=0.6.0"
anyio = ">=4.3.0"
certifi = ">=2024.2.2"
charset-normalizer = ">=3.3.2"
colorama = ">=0.4.6"
distro = ">=1.9.0"
h11 = ">=0.14.0"
httpcore = ">=1.0.5"
httpx = ">=0.27.0"
idna = ">=3.7"
numpy = ">=1.26.4"
openai = ">=1.28.1"
packaging = ">=24.0"
pandas = ">=2.2.2"
pefile = ">=2023.2.7"
pydantic = ">=2.7.1"
pydantic-core = ">=2.18.2"
pyinstaller = ">=6.7.0"
pyinstaller-hooks-contrib = ">=2024.6"
python-dateutil = ">=2.9.0"
pytz = ">=2024.1"
pywin32-ctypes = ">=0.2.2"
requests = ">=2.31.0"
six = ">=1.16.0"
sniffio = ">=1.3.1"
tqdm = ">=4.66.4"
typing-extensions = ">=4.11.0"
tzdata = ">=2024.1"
urllib3 = ">=2.2.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
bandit = { version = ">=1.7", extras = ["toml"] }
black = ">=22.8"
factory_boy = "3.3.0"
flake8 = ">=3.7"
flake8-bugbear = ">=20.1"
flake8-unused-arguments = ">=0.0.13"
flake8-tidy-imports = ">=4.9.0"
isort = ">=5.0"
mypy = ">=0.900"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = ">=8.2.0"
pytest-asyncio = "<=0.21.2"
pytest-cov = ">=2.8"
jinja2 = ">=3.1.3"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest.ini_options]
addopts = [
    "--capture=sys",
    "--cov-report=html",
    "--cov-report=term",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--junitxml=junit.xml",
    "-vv"
]
asyncio_mode = "auto"
junit_family = "xunit1"
testpaths = "tests"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
